
5.1.0 -> 5.2a0:
    - jbj: WR: run-time discovered configuration goopiness, take 1.
    - jbj: WR: rely on PATH to find pkg-config.
    - jbj: WR: don't spew error messages with internal lua shadow module.
    - jbj: WR: add shadow/chkconfig internal lua modules.
    - jbj: WR: Color/arch affinity while upgrading on multilib platforms.
    - jbj: WR: Permit configurable arch strings.
    - jbj: WR: Use %{_host_vendor} and %{_host_os} for platform.
    - jbj: WR: fakeroot maps devices to files. avoid /dev/* in checkfiles.
    - jbj: lua: don't exit chroot if already within running script.
    - at: gzdio: fixed and re-enabled rsyncable_gzwrite()
    - jbj: rpmku: create opaque keyutils keyring.
    - jbj: keyutils: permit configurable keyring.
    - rse: fix building under --with-lzma by providing the necessary 64-bit defines for inclusion of <lzma.h>
    - jbj: QNX: use strtouq() instead of strtoul() in rpmmtree.
    - jbj: QNX: retrofit asprintf.h (from XAR) for the deprived. rpmmtree uses
	(rewrite to eliminate asprintf is an alternative).
    - jbj: QNX: supply missing typedef's for uint32_t.
    - jbj: add alternative %{sparcx} macro shorthand (bz #455972).
    - jbj: rpmio: add new link/unlink methods to loader map.
    - jbj: python: add rpm.Keyring/rpm.Pubkey subtype methods for rpmkeyring.
    - jbj: python: convert rpmtd-py to rpm style includes.
    - jbj: filetriggers: rewite w splint annotations. much more todo++ here.
    - jbj: keyring: (re-)port keyring.[ch] w refcounts.
    - rpm.org: (re-)steal rpmkeyring.[ch] with added refcounts.
    - jbj: python: add rpm.td subtype methods for rpmtd.
    - jbj: rpmtd: expose symbols needed by python rpm.td.
    - jbj: rpmtd: rework rpmtdFormats lookup. more todo++.
    - jbj: rpmtd: initial port.
    - rpm.org: steal rpmtd.[ch] modules for porting.
    - rpm.org: steal rpmkeyring/rpmtd modules for porting work.
    - jbj: fix: use the uint64_t callback args, not the legacy compat copies.