@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - at: rpmdb.c: enable/disable rpmsq signal handlers with respect to rpmdbRock
     - jbj: WR: run-time discovered configuration goopiness, take 1.
     - jbj: WR: rely on PATH to find pkg-config.
     - jbj: WR: don't spew error messages with internal lua shadow module.
